Make ruby2_keywords methods correctly handle **{} optimization

Previously, this code:

  ruby2_keywords def foo(*a) a.last end
  foo(**{})

Returned an empty frozen hash.  However, the final hash should
not be frozen in this case, as it wouldn't be if foo accepted
a keyword splat.

Use a new unfrozen empty hash instead of reusing the frozen empty
hash in this case.

Fixes [Bug #16642]